tests/errors/syn_err08.kt
// extra closing brace error
fun foo() {
    println("Hello")
}}